# HexagonalRustLambda

./: .gitignore  .tflint.tf  Cargo.toml  Makefile  Readme.md
common/driven/dynamo_db_repository/: Cargo.toml
common/driven/dynamo_db_repository/src/: lib.rs
common/driven/eventing/: Cargo.toml
common/driven/eventing/src/: lib.rs
common/driven/eventing/src/events/: event_emmiter.rs  event_wrapper.rs  mod.rs
common/driven/eventing/src/events/cart/: cart_item_added.rs  cart_items_removed.rs  cart_product_global_deleted.rs  mod.rs
common/driven/eventing/src/events/product/: mod.rs  product_created.rs  product_deleted.rs  product_updated.rs
common/driven/eventing/src/events/user/: mod.rs  user_created.rs  user_deleted.rs  user_updated.rs  username_updated.rs
common/driven/models/: Cargo.toml
common/driven/models/src/: lib.rs
common/driven/models/src/models/: cart.rs  mod.rs  product.rs  user.rs
common/driven/persistance_repository/: Cargo.toml
common/driven/persistance_repository/src/: lib.rs
common/driven/sdk_credential_meta_repository/: Cargo.toml
common/driven/sdk_credential_meta_repository/src/: lib.rs
common/driving/http_apigw_adaptor/: Cargo.toml
common/driving/http_apigw_adaptor/src/: lib.rs
common/driving/http_port_tools/: Cargo.toml
common/driving/http_port_tools/src/: lib.rs  payload_decoder.rs  port_objects.rs
common/driving/lambda_adaptor/: Cargo.toml
common/driving/lambda_adaptor/src/: lib.rs
common/error/: Cargo.toml
common/error/src/: lib.rs
infra/: .terraform.lock.hcl  apigw.tf  dynamodb_policy.tf  dynamodb_single_table.tf  event_bus.tf  event_bus_policy.tf  locals.tf  main.tf  output.tf  provider.tf  variables.tf
infra/cart_service/: cart_add_item.tf  cart_clear_http.tf  cart_clear_user_delete_event.tf  cart_get.tf  cart_product_delete_event.tf  cart_remove_item.tf  cart_update_item.tf  router.tf  variables.tf
infra/lambda_common/: lambda.tf  variables.tf
infra/lambda_event_common/: assume_role_policy.tf  lambda.tf  variables.tf
infra/lambda_http_common/: lambda.tf  output.tf
infra/product_service/: product_batch_get.tf  product_create.tf  product_delete.tf  product_get.tf  product_update.tf  router.tf
infra/user_service/: hello_world.tf  outputs.tf  router.tf  user_create.tf  user_delete.tf  user_email_update.tf  user_get.tf  user_update.tf  user_username_update.tf  variables.tf
services/cart/: Cargo.toml
services/cart/cart_add_item/: domain.rs  http_adaptor.rs  http_port.rs
services/cart/cart_clear/: domain.rs  event_port.rs  eventbridge_adaptor.rs  eventbridge_port.rs  http_adaptor.rs  http_port.rs
services/cart/cart_get/: domain.rs  http_adaptor.rs  http_port.rs
services/cart/cart_product_global_delete/: domain.rs  event_port.rs  eventbridge_adaptor.rs  eventbridge_port.rs
services/cart/cart_remove_item/: domain.rs  http_adaptor.rs  http_port.rs
services/cart/cart_update_item/: domain.rs  http_adaptor.rs  http_port.rs
services/product/: Cargo.toml
services/product/product_batch_get/: domain.rs  http_adaptor.rs  http_port.rs  mod.rs
services/product/product_create/: domain.rs  http_adaptor.rs  http_port.rs
services/product/product_delete/: domain.rs  http_adaptor.rs  http_port.rs
services/product/product_get/: domain.rs  http_adaptor.rs  http_port.rs
services/product/product_update/: domain.rs  http_adaptor.rs  http_port.rs
services/users/: Cargo.toml
services/users/hello_world/: domain.rs  http_adaptor.rs  http_port.rs
services/users/lib_user_regexes/: lib.rs
services/users/user_create/: domain.rs  http_adaptor.rs  http_port.rs
services/users/user_delete/: domain.rs  http_adaptor.rs  http_port.rs
services/users/user_email_update/: domain.rs  http_adaptor.rs  http_port.rs
services/users/user_get/: domain.rs  http_adaptor.rs  http_port.rs
services/users/user_update/: domain.rs  http_adaptor.rs  http_port.rs
services/users/user_username_update/: domain.rs  http_adaptor.rs  http_port.rs
test/: artillery.yml  extensions.js  package-lock.json
test-artillery/: artillery.yml  package.json
test-integration/: .mocharc.json  global_hooks.mjs  package-lock.json  package.json
test-integration/test/cart/: cart_add_item.mjs  cart_clear.mjs  cart_get.mjs  cart_remove_item.mjs  cart_update_item.mjs
test-integration/test/eventing/: clear_user_cart_on_deletion.mjs  delete_product_cart_event.mjs
test-integration/test/product/: product_batch_get.mjs  product_create.mjs  product_delete.mjs  product_get.mjs  product_update.mjs
test-integration/test/user/: hello_world.mjs  user_create.mjs  user_delete.mjs  user_email_update.mjs  user_get.mjs  user_update.mjs  user_username_update.mjs
