[workspace]
members = [
  # Service Definitions 
  "services/users",
  "services/product",
  "services/cart",
  # Common Library Definitions
  "common/driving/*",
  "common/driven/*",
  "common/error"
]

[workspace.dependencies]
# Common Lambda HTTP Dependencies
lambda_http = { version = "0.8.1" }
lambda_runtime = { version = "0.8.1" }
serde = "1.0.136"
# Common Lambda Dependencies
tokio = { version = "1", features = ["full"] }
async-trait = { version = "0.1.73" }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws_lambda_events = { version = "0.10.0" }
http = { version = "0.2.9" }
query_map = { version = "0.7.0" }
lazy_static = { version = "1.4.0" }
jsonschema = { version = "0.17.1" }
serde_json = { version = "1.0.105" }
once_cell = { version = "1.4.0" }
regex = { version = "1.9.5" }
uuid = {version = "1.4.1", features = ["serde", "v4"] }

# AWS SDK Dependencies
aws-config = { version = "0.56.1" }
aws-sdk-dynamodb = { version = "0.31.1" }
aws-sdk-eventbridge = {version = "0.31.1" }

# Local Dependencies
models = { path = "common/driven/models" }
lambda_adaptor = { path = "common/driving/lambda_adaptor" }
http_port_tools = { path = "common/driving/http_port_tools" }
persistance_repository = { path = "common/driven/persistance_repository" }
eventing = { path = "common/driven/eventing" }
sdk_credential_meta_repository = { path = "common/driven/sdk_credential_meta_repository" }
error = { path = "common/error" }

# Testing Dependencies
mockall = { version = "0.11.4" }

[workspace.package]
version = "0.0.0"
authors = ["Aiden Ziegelaar"]
description = "A simple store API"
documentation = "https://aiden.ziegelaar.io"
edition = "2021"
