[package]
name = "product_service"
version.workspace = true
authors.workspace = true
description = "Service to add, update, delete and get products"
documentation.workspace = true
edition = "2021"

[[bin]]
name = "product_create"
path = "product_create/http_adaptor.rs"

[[bin]]
name = "product_delete"
path = "product_delete/http_adaptor.rs"

[[bin]]
name = "product_get"
path = "product_get/http_adaptor.rs"

[[bin]]
name = "product_batch_get"
path = "product_batch_get/http_adaptor.rs"

[[bin]]
name = "product_update"
path = "product_update/http_adaptor.rs"

[dependencies]
http = { workspace = true }
jsonschema = { workspace = true }
lambda_http = { workspace = true }
lazy_static = { workspace = true }
models = { workspace = true }
query_map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
http_apigw_adaptor = { workspace = true }
lambda_adaptor = { workspace = true }
persistance_repository = { workspace = true}
http_port_tools = { workspace = true }
eventing = { workspace = true}
sdk_credential_meta_repository = { workspace = true }
aws-config = { workspace = true }
error = { workspace = true }
mockall = { workspace = true }
uuid = { workspace = true }
