[package]
name = "user_service"
version.workspace = true
authors.workspace = true
description = "Service to add, update, delete and get users"
documentation.workspace = true
edition = "2021"

[[bin]]
name = "hello_world"
path = "hello_world/http_adaptor.rs"


[dependencies]
http = { workspace = true }
lambda_http = { workspace = true }
query_map = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
http_apigw_adaptor = { workspace = true }
lambda_adaptor = { workspace = true }
