[package]
name = "user_service"
version.workspace = true
authors.workspace = true
description = "Service to add, update, delete and get users"
documentation.workspace = true
edition = "2021"

[[bin]]
name = "user_hello_world"
path = "hello_world/http_adaptor.rs"

[[bin]]
name = "user_create"
path = "user_create/http_adaptor.rs"

[[bin]]
name = "user_update"
path = "user_update/http_adaptor.rs"

[[bin]]
name = "user_username_update"
path = "user_username_update/http_adaptor.rs"

[dependencies]
http = { workspace = true }
jsonschema = { workspace = true }
lambda_http = { workspace = true }
lazy_static = { workspace = true }
models = { workspace = true }
query_map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
http_apigw_adaptor = { workspace = true }
lambda_adaptor = { workspace = true }
dynamo_db_repository = { workspace = true}
aws-config = { workspace = true }