[package]
name = "user_service"
version.workspace = true
authors.workspace = true
description = "Service to add, update, delete and get users"
documentation.workspace = true
edition = "2021"

[lib]
name = "lib_user_regexes"
path = "lib_user_regexes/lib.rs"

[[bin]]
name = "user_hello_world"
path = "hello_world/http_adaptor.rs"

[[bin]]
name = "user_create"
path = "user_create/http_adaptor.rs"

[[bin]]
name = "user_update"
path = "user_update/http_adaptor.rs"

[[bin]]
name = "user_delete"
path = "user_delete/http_adaptor.rs"

[[bin]]
name = "user_get"
path = "user_get/http_adaptor.rs"

[[bin]]
name = "user_email_update"
path = "user_email_update/http_adaptor.rs"

[dependencies]
http = { workspace = true }
jsonschema = { workspace = true }
lambda_http = { workspace = true }
lazy_static = { workspace = true }
models = { workspace = true }
query_map = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
lambda_runtime = { workspace = true }
http_apigw_adaptor = { workspace = true }
lambda_adaptor = { workspace = true }
persistance_repository = { workspace = true}
http_port_tools = { workspace = true }
eventing = { workspace = true}
sdk_credential_meta_repository = { workspace = true }
aws-config = { workspace = true }
error = { workspace = true }
regex = { workspace = true }
mockall = { workspace = true }