[package]
name = "eventing"
version.workspace = true
authors.workspace = true
description = "Repository for interacting with Eventing Adaptor"
documentation.workspace = true
edition.workspace = true

[dependencies]
aws-config = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdk_credential_meta_repository = { workspace = true }
tokio = { workspace = true }
