[package]
name = "eventing"
version.workspace = true
authors.workspace = true
description = "Repository for interacting with Eventing Adaptor"
documentation.workspace = true
edition.workspace = true

[dependencies]
# core
aws-config = { workspace = true }
aws-sdk-eventbridge = { workspace = true }
jsonschema = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sdk_credential_meta_repository = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
mockall = { workspace = true }
# Monorepo
models = { workspace = true }
error = { workspace = true }