[package]
name = "models"
version.workspace = true
authors.workspace = true
description = "Repository for all models, traits (interfaces) and adaptors (implementations) in the project"
documentation.workspace = true
edition.workspace = true

[dependencies]
aws-sdk-dynamodb = { workspace = true }
serde = { workspace = true }
persistance_repository = { workspace = true }
tokio = { workspace = true }
once_cell = { workspace = true }
error = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
mockall ={ workspace = true }

[lib]
doctest = false