[package]
name = "http_port_tools"
version.workspace = true
authors.workspace = true
description = "Tools for use inside HTTP ports"
documentation.workspace = true
edition.workspace = true

[lib]
doctest = false

[dependencies]
http = { workspace = true }
query_map = { workspace = true }
lambda_http = { workspace = true }
lambda_adaptor = { workspace = true }