[package]
name = "lambda_adaptor"
version.workspace = true
authors.workspace = true
description = "Lambda driver adaptor macro for all triggers"
documentation.workspace = true
edition.workspace = true

[dependencies]

[features]
none = []
default = ["use_dynamo_db_repository"]
use_dynamo_db_repository = []